--- a/src/components/menuBar/MenuBar.css
+++ b/src/components/menuBar/MenuBar.css
@@ -1,6 +1,6 @@
 :root {
-    --menu-bar-width: 50px;
-    --menu-bar-height: 8px;
+    --menu-bar-width: 35px;
+    --menu-bar-height: 5px;
 }
 
 .menu-bar {
@@ -9,7 +9,6 @@
     width: 60px;
     padding: 20px 0;
 }
-
 
 .menu-icon {
     background-color: var(--white);
@@ -36,16 +35,16 @@
     bottom: -15px;
 }
 
-.menu-container:hover .menu-icon {
+.menu-bar.open .menu-icon {
     background-color: transparent;
 }
 
-.menu-container:hover .menu-icon::before {
+.menu-bar.open .menu-icon::before {
     transform: rotate(45deg);
     top: 0;
 }
 
-.menu-container:hover .menu-icon::after {
+.menu-bar.open .menu-icon::after {
     transform: rotate(-45deg);
     bottom: 0;
 }
