--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Homenaje&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Nanum+Pen+Script&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -10,38 +10,42 @@
     --white: #FAF9F9;
     --dark-green: #89B0AE;
     --light-grey: #555B6E;
-    --light-green: #BEE3DB;
-    --peach: #FFD6BA;
+    --light-blue: #CFDBD5;
+    --yellow: #F5CB5C;
 }
 
 body {
-    font-family: "Homenaje",Calibri,Verdana,serif;
+    font-family: "Poppins",Calibri,Verdana,serif;
     font-weight: 400;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
 h1, h2, h3, h4, h5 {
-    font-family: 'Merriweather',Georgia,"Times New Roman",serif;
+    font-family: "Poppins",Georgia,"Times New Roman",serif;
     font-weight: 700;
 }
 
-html {font-size: 100%;} /* 16px */
-
-h1 {font-size: 4.210rem; /* 67.36px */}
-
-h2 {font-size: 3.158rem; /* 50.56px */}
-
-h3 {font-size: 2.369rem; /* 37.92px */}
-
-h4 {font-size: 1.777rem; /* 28.48px */}
-
-h5 {font-size: 1.333rem; /* 21.28px */}
-
-small {font-size: 0.750rem; /* 12px */}
-
+body {font-size: 1rem;}
+h1 {font-size: 2rem;}
+h2 {font-size: 1.5rem;}
+h3 {font-size: 1.4rem;}
+h4 {font-size: 1.3rem;}
+h5 {font-size: 1.2rem;}
 
 button, input {
     font-family: inherit;
 }
+
+@media screen and (min-width: 768px) {
+
+body {font-size: 1.2rem;}
+h1 {font-size: 3rem;}
+h2 {font-size: 2.5rem;}
+h3 {font-size: 2.3rem;}
+h4 {font-size: 2rem;}
+h5 {font-size: 1.7rem;}
+
+}
+
 
