--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -11,27 +12,57 @@
     --dark-green: #89B0AE;
     --light-grey: #555B6E;
     --light-blue: #CFDBD5;
-    --yellow: #F5CB5C;
+    --yellow: #F5CB5C; /* Light theme */
+    --background: var(--white);
+    --foreground: var(--black);
+    --nav-link: var(--white);
+    --nav-link-hover: var(--yellow);
+    --transition: 0.3s ease;
+}
+
+[data-theme="dark"] {
+    --background: var(--black);
+    --foreground: var(--white);
+    --nav-link: var(--white);
+    --nav-link-hover: var(--yellow);
+    --transition: 0.3s ease;
 }
 
 body {
-    font-family: "Poppins",Calibri,Verdana,serif;
+    font-family: "Poppins", Calibri, Verdana, serif;
     font-weight: 400;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
 h1, h2, h3, h4, h5 {
-    font-family: "Poppins",Georgia,"Times New Roman",serif;
+    font-family: "Poppins", Georgia, "Times New Roman", serif;
     font-weight: 700;
 }
 
-body {font-size: 1rem;}
-h1 {font-size: 2rem;}
-h2 {font-size: 1.5rem;}
-h3 {font-size: 1.4rem;}
-h4 {font-size: 1.3rem;}
-h5 {font-size: 1.2rem;}
+body {
+    font-size: 1rem;
+}
+
+h1 {
+    font-size: 2rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+}
+
+h3 {
+    font-size: 1.4rem;
+}
+
+h4 {
+    font-size: 1.3rem;
+}
+
+h5 {
+    font-size: 1.2rem;
+}
 
 button, input {
     font-family: inherit;
@@ -39,12 +70,29 @@ button, input {
 
 @media screen and (min-width: 768px) {
 
-body {font-size: 1.2rem;}
-h1 {font-size: 3rem;}
-h2 {font-size: 2.5rem;}
-h3 {font-size: 2.3rem;}
-h4 {font-size: 2rem;}
-h5 {font-size: 1.7rem;}
+    body {
+        font-size: 1.2rem;
+    }
+
+    h1 {
+        font-size: 3rem;
+    }
+
+    h2 {
+        font-size: 2.5rem;
+    }
+
+    h3 {
+        font-size: 2.3rem;
+    }
+
+    h4 {
+        font-size: 2rem;
+    }
+
+    h5 {
+        font-size: 1.7rem;
+    }
 
 }
 
