--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,4 +1,22 @@
 .button-styling {
-    /*display: inline-block;*/
-    padding: 1rem 2rem;
+    align-items: center;
+    appearance: none;
+    background-color: var(--dark-green);
+    border-radius: 4px;
+    border-width: 0;
+    box-sizing: border-box;
+    color: #36395A;
+    cursor: pointer;
+    justify-content: center;
+    line-height: 1;
+    list-style: none;
+    overflow: hidden;
+    text-align: left;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    will-change: box-shadow, transform;
+    font-size: 18px;
 }
