--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -28,12 +28,12 @@ nav {
     width: 100%;
     position: fixed;
     display: flex;
+    z-index: 1000;
 }
 
 .nav-links a {
     color: var(--nav-link);
     transition: color var(--transition);
-    text-decoration: none;
 }
 
 .nav-outercontainer {
@@ -74,6 +74,7 @@ nav {
     background: var(--light-grey);
     padding: 2rem;
     width: 200px;
+    z-index: 999;
 }
 
 .menu-bar {
@@ -92,7 +93,6 @@ nav {
 }
 
 /* ── 3. Media Queries ─────────────────────────────────────────── */
-
 @media screen and (min-width: 768px) {
     .nav-links {
         display: flex;
