footer en productcard bijgewerkt

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,6 +1,9 @@
-footer  {
-    background-color: var(--light-grey);
+footer {
+    background: var(--nav-footer);
     color: var(--white);
     padding: 1rem 0;
     text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
