--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,11 @@
 /*    1.1 Main ──────────────────────────────────────────────── */
 
 main {
+    flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     margin: 0 auto;
-    padding: 6.2rem 0 0 0;
+    padding: 6.2rem 0 4rem 0;
     max-width: 80%;
 }
 
