--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,7 +1,7 @@
 .button-styling {
     align-items: center;
     appearance: none;
-    background-color: var(--dark-green);
+    background-color: var(--dark-blue);
     border-radius: 4px;
     border-width: 0;
     box-sizing: border-box;
