--- a/src/components/inputField/InputField.css
+++ b/src/components/inputField/InputField.css
@@ -3,12 +3,12 @@
         padding-left: 16px;
         padding-right: 70px;
         height: 48px;
-        border: 2px solid var(--dark-green);
+        border: 2px solid var(--dark-blue);
         outline: none;
     }
 
     .input-field:focus {
-        border-color: var(--dark-green);
+        border-color: var(--dark-blue);
     }
 
     @media screen and (min-width: 768px) {
