--- a/src/pages/homePage/Home.css
+++ b/src/pages/homePage/Home.css
@@ -22,15 +22,14 @@
 }
 
 .home-button-input {
-    margin: 1rem 0 2rem 0;
+    margin: 1rem 0 0 0;
     padding: 16px 16px;
 }
 
 /*    1.2 Main text ──────────────────────────────────────────────── */
 .main-text {
     margin: 0 auto;
-    padding: 2rem 0;
-    border: 2px solid red;
+    padding: 0 0 1rem 0;
 }
 
 .main-text > p {
@@ -39,7 +38,12 @@
 
 /*    1.3 Articles ──────────────────────────────────────────────── */
 .outer-container-articles {
-    border: 2px solid slateblue;
+    /*border: 2px dotted var(--dark-blue);*/
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 /* ── 2. Media Queries ─────────────────────────────────────────── */
@@ -73,5 +77,9 @@
         border: none;
         padding: 0 1rem;
         margin: 0;
+    }
+
+    .main-text {
+        padding: 2rem 0 4rem 0;
     }
 }
