--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,7 +1,7 @@
 footer {
     background: var(--nav-footer);
     color: var(--white);
-    padding: 1rem 0;
+    padding: 0;
     text-align: center;
     position: fixed;
     bottom: 0;
