--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -18,5 +18,5 @@
     touch-action: manipulation;
     white-space: nowrap;
     will-change: box-shadow, transform;
-    font-size: 18px;
+    font-size: 1rem;
 }
