--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,9 +1,8 @@
 footer {
     background: var(--nav-footer);
     color: var(--white);
-    padding: 0;
+    padding: 1rem;
     text-align: center;
-    position: fixed;
-    bottom: 0;
     width: 100%;
+    margin-top: auto;
 }
