--- a/src/components/productCard/ProductCard.css
+++ b/src/components/productCard/ProductCard.css
@@ -18,6 +18,10 @@
     background: white;
 }
 
+.product-card p {
+    color: var(--black);
+}
+
 .product-card img {
     width: 100%;
     height: 150px;
