--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,9 @@
     --menu-bar: #4B749F;
 }
 
-[data-theme="dark"] {
-    --background: var(--black);
-    --foreground: var(--white);
-    --nav-link: var(--white);
-    --nav-link-hover: var(--yellow);
-    --transition: 0.3s ease;
+html, body {
+    height: 100%;
+    margin: 0;
 }
 
 body {
@@ -38,6 +35,20 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+}
+
+#root {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+[data-theme="dark"] {
+    --background: var(--black);
+    --foreground: var(--white);
+    --nav-link: var(--white);
+    --nav-link-hover: var(--yellow);
+    --transition: 0.3s ease;
 }
 
 h1, h2, h3, h4, h5 {
