--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,8 +1,9 @@
 footer {
     background: var(--nav-footer);
     color: var(--white);
-    padding: 1rem;
+    padding: 0.5rem;
     text-align: center;
     width: 100%;
     margin-top: auto;
+    font-size: 1rem;
 }
