--- a/src/components/productCard/ProductCard.css
+++ b/src/components/productCard/ProductCard.css
@@ -7,6 +7,8 @@
 }
 
 .product-card {
+    color: var(--foreground);
+    background: var(--card-bg);
     max-width: 240px;
     width: 100%;
     display: flex;
@@ -15,11 +17,6 @@
     padding: 1.2rem;
     border-radius: 15px;
     box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.1);
-    background: white;
-}
-
-.product-card p {
-    color: var(--black);
 }
 
 .product-card img {
