--- a/src/pages/homePage/Home.css
+++ b/src/pages/homePage/Home.css
@@ -83,3 +83,26 @@
         padding: 2rem 0 4rem 0;
     }
 }
+
+
+/*Loader uitproberen
+ */
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid var(--foreground);
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
