--- a/src/components/productCard/ProductCard.css
+++ b/src/components/productCard/ProductCard.css
@@ -1,39 +1,51 @@
-.card {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
-}
-
 .product-card {
     color: var(--foreground);
     background: var(--card-bg);
-    max-width: 240px;
-    width: 100%;
+    width: 240px;
+    height: 380px;
     display: flex;
     flex-direction: column;
-    gap: 0.8rem;
     padding: 1.2rem;
     border-radius: 15px;
     box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
 }
 
-.product-card img {
+.image-wrapper {
+    height: 200px;
     width: 100%;
-    height: 150px;
-    object-fit: cover;
+    overflow: hidden;
     border-radius: 8px;
+    background: var(--card-bg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.image-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.card-content {
+    flex: 1;
+    overflow: hidden;
+    padding-top: 1rem;
+}
+
+.card-content p {
+    margin-bottom: 0.2rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+
 
 @media screen and (min-width: 768px) {
-    .product-card {
-        max-width: 260px;
-    }
 }
 
 @media screen and (min-width: 992px) {
-    .product-card {
-        max-width: 280px;
-    }
 }
