--- a/src/pages/homePage/Home.css
+++ b/src/pages/homePage/Home.css
@@ -38,12 +38,12 @@
 
 /*    1.3 Articles ──────────────────────────────────────────────── */
 .outer-container-articles {
-    /*border: 2px dotted var(--dark-blue);*/
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     max-width: 1200px;
     margin: 0 auto;
+    gap: 1rem;
 }
 
 /* ── 2. Media Queries ─────────────────────────────────────────── */
