--- a/src/components/productCard/ProductCard.css
+++ b/src/components/productCard/ProductCard.css
@@ -43,6 +43,18 @@
     -webkit-box-orient: vertical;
 }
 
+.no-image {
+    width: 100%;
+    height: 200px;
+    background: #e5e5e5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #555;
+    font-weight: bold;
+    border-radius: 4px;
+}
+
 
 @media screen and (min-width: 768px) {
 }
