--- a/src/pages/homePage/Home.css
+++ b/src/pages/homePage/Home.css
@@ -4,6 +4,8 @@
       1.1 Search field
       1.2 Main text
       1.3 Articles
+      1.4 Loader
+      1.5 Error message
    2. Media Queries
    ──────────────────────────────────────────────────────────────── */
 
@@ -45,6 +47,33 @@
     margin: 0 auto;
     gap: 1rem;
 }
+/*    1.4 Loader ──────────────────────────────────────────────── */
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid var(--foreground);
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    margin: 2rem auto;
+}
+
+/*    1.5 Error message ──────────────────────────────────────────────── */
+.error-message {
+    margin: 2rem auto;
+    color: firebrick;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
 
 /* ── 2. Media Queries ─────────────────────────────────────────── */
 @media screen and (min-width: 768px) {
@@ -81,28 +110,5 @@
 
     .main-text {
         padding: 2rem 0 4rem 0;
-    }
-}
-
-
-/*Loader uitproberen
- */
-.loader {
-    width: 48px;
-    height: 48px;
-    border: 5px solid var(--foreground);
-    border-bottom-color: transparent;
-    border-radius: 50%;
-    display: inline-block;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
-}
-
-@keyframes rotation {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
     }
 }
