--- a/src/pages/bookDetails/BookDetails.css
+++ b/src/pages/bookDetails/BookDetails.css
@@ -1,17 +1,20 @@
 /* ────────────────────────────────────────────────────────────────
    TABLE OF CONTENTS
-   1. Areas
-      1.1 Search field
-      1.2 Main text
-      1.3 Articles
-      1.4 Loader
-      1.5 Error message
+   1. Article
    2. Media Queries
    ──────────────────────────────────────────────────────────────── */
 
-/* ── 1. Areas ─────────────────────────────────────────────────── */
-
-/*    1.1 Search field ──────────────────────────────────────────────── */
+/* ── 1. Article ─────────────────────────────────────────────────── */
+.book-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+.book-details img {
+    width: 200px;
+}
 
 /*    1.4 Loader ──────────────────────────────────────────────── */
 .loader {
@@ -37,4 +40,31 @@
 .error-message {
     margin: 2rem auto;
     color: firebrick;
+}
+
+/*    1.5 Media Queries ──────────────────────────────────────────────── */
+@media screen and (min-width: 768px) {
+        .book-details {
+            flex-direction: row;
+            justify-content: center;
+            align-items: flex-start;
+            padding-top: 3rem;
+            margin: 0 auto;
+        }
+        .book-details img {
+            width: 300px;
+        }
+        .wrapper-summary {
+            padding-left: 2rem;
+        }
+    .wrapper-summary h2,h3 {
+        margin-bottom: 1rem;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .book-details {
+        max-width: 80%;
+        margin: 0 auto;
+    }
 }
