--- a/src/pages/bookDetails/BookDetails.css
+++ b/src/pages/bookDetails/BookDetails.css
@@ -1,7 +1,10 @@
 /* ────────────────────────────────────────────────────────────────
    TABLE OF CONTENTS
    1. Article
-   2. Media Queries
+   2. Loader
+   3. Error message
+   4. Button
+   5. Media Queries
    ──────────────────────────────────────────────────────────────── */
 
 /* ── 1. Article ─────────────────────────────────────────────────── */
@@ -12,11 +15,26 @@
     align-items: center;
     gap: 1rem;
 }
+
 .book-details img {
     width: 200px;
 }
 
-/*    1.4 Loader ──────────────────────────────────────────────── */
+.no-image {
+    background: var(--light-grey);
+    color: var(--white);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 200px;
+    height: 250px;
+    border-radius: 8px;
+}
+.wrapper-summary h2, h3 {
+    margin-bottom: 1rem;
+}
+
+/*    2. Loader ──────────────────────────────────────────────── */
 .loader {
     width: 48px;
     height: 48px;
@@ -28,6 +46,7 @@
     animation: rotation 1s linear infinite;
     margin: 2rem auto;
 }
+
 @keyframes rotation {
     0% {
         transform: rotate(0deg);
@@ -36,29 +55,60 @@
         transform: rotate(360deg);
     }
 }
-/*    1.5 Error message ──────────────────────────────────────────────── */
+
+/*    3. Error message ──────────────────────────────────────────────── */
 .error-message {
     margin: 2rem auto;
     color: firebrick;
 }
 
-/*    1.5 Media Queries ──────────────────────────────────────────────── */
+/*    4. Button ──────────────────────────────────────────────── */
+.button-overview {
+    padding: 0.5rem 1rem;
+    display: flex; align-items: center; gap: 0.1rem;
+    color: var(--black);
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.media-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+/*    5. Media Queries ──────────────────────────────────────────────── */
 @media screen and (min-width: 768px) {
-        .book-details {
-            flex-direction: row;
-            justify-content: center;
-            align-items: flex-start;
-            padding-top: 3rem;
-            margin: 0 auto;
-        }
-        .book-details img {
-            width: 300px;
-        }
-        .wrapper-summary {
-            padding-left: 2rem;
-        }
-    .wrapper-summary h2,h3 {
+    .book-details {
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+        padding-top: 3rem;
+        margin: 0 auto;
+    }
+
+    .book-details img {
+        width: 300px;
+    }
+
+    .wrapper-summary {
+        padding-left: 2rem;
+    }
+
+    .wrapper-summary h2, h3 {
         margin-bottom: 1rem;
+    }
+
+    .media-column {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .button-overview {
+        padding: 1rem 2rem;
+        font-size: 1.2rem;
     }
 }
 
