--- a/src/pages/homePage/Home.css
+++ b/src/pages/homePage/Home.css
@@ -42,6 +42,7 @@
 .outer-container-articles {
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     max-width: 1200px;
     margin: 0 auto;
@@ -81,11 +82,18 @@
     margin: 0.2rem 0;
     display: inline-block;
     font-weight: 600;
+    font-size: 1rem;
 }
 .button-favorites{
     background-color: var(--dark-blue);
+    border: none;
+    font-size: 1rem;
+    cursor: pointer;
 }
-
+.wrapper-button-favorites {
+    display: flex;
+    align-items: center;
+}
 
 /* ── 2. Media Queries ─────────────────────────────────────────── */
 @media screen and (min-width: 768px) {
