--- a/src/pages/bookDetails/BookDetails.css
+++ b/src/pages/bookDetails/BookDetails.css
@@ -26,9 +26,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 200px;
-    height: 250px;
-    border-radius: 8px;
+    max-width: 150px;
+    border-radius: 10px;
 }
 
 .wrapper-summary h2, h3 {
@@ -87,6 +86,7 @@
 
 .button-mobile {
     display: flex;
+    margin: 2rem auto 0 auto;
 }
 
 /*    5. Media Queries ──────────────────────────────────────────────── */
@@ -111,6 +111,8 @@
     }
 
     .button-overview {
+        display: flex;
+        margin: 1rem 0 0 0;
         padding: 1rem 2rem;
         font-size: 1.2rem;
     }
@@ -120,11 +122,6 @@
         flex-direction: column;
         justify-content: space-evenly;
         gap: 1rem;
-    }
-
-    .button-mobile {
-        display: flex;
-        margin-top: 1rem;
     }
 
     .media-column .button-overview {
