--- a/src/pages/homePage/Home.css
+++ b/src/pages/homePage/Home.css
@@ -6,6 +6,7 @@
       1.3 Articles
       1.4 Loader
       1.5 Error message
+      1.6 Pagination
    2. Media Queries
    ──────────────────────────────────────────────────────────────── */
 
@@ -48,6 +49,7 @@
     margin: 0 auto;
     gap: 1rem;
 }
+
 /*    1.4 Loader ──────────────────────────────────────────────── */
 .loader {
     width: 48px;
@@ -60,6 +62,7 @@
     animation: rotation 1s linear infinite;
     margin: 2rem auto;
 }
+
 @keyframes rotation {
     0% {
         transform: rotate(0deg);
@@ -68,6 +71,7 @@
         transform: rotate(360deg);
     }
 }
+
 /*    1.5 Error message ──────────────────────────────────────────────── */
 .error-message {
     margin: 2rem auto;
@@ -84,13 +88,31 @@
     font-weight: 600;
     font-size: 1rem;
 }
-.button-favorites{
+
+.button-favorites {
     background-color: var(--dark-blue);
     border: none;
     font-size: 1rem;
     cursor: pointer;
     display: flex;
     align-items: center;
+}
+
+/*    1.6 Pagination ──────────────────────────────────────────────── */
+.pagination {
+    display: flex;
+    justify-content: center;
+    gap: 6rem;
+    align-items: center;
+    margin-top: 1rem;
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+
+.pagination span {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
 }
 
 /* ── 2. Media Queries ─────────────────────────────────────────── */
@@ -128,5 +150,9 @@
 
     .main-text {
         padding: 2rem 0 4rem 0;
+    }
+    .pagination {
+        margin-top: 2rem;
+        gap: 8rem;
     }
 }
