--- a/src/components/inputField/InputField.css
+++ b/src/components/inputField/InputField.css
@@ -1,11 +1,10 @@
     .input-field {
         border-radius: 4px;
         padding-left: 16px;
-        padding-right: 70px;
         height: 48px;
         border: 2px solid var(--dark-blue);
         outline: none;
-        font-size: 1rem;
+        font-size: 0.9rem;
     }
 
     .input-field:focus {
@@ -16,5 +15,8 @@
         .input-field {
             padding-left: 5px;
             height: 52px;
+        }
+        .input-field {
+            font-size: 1rem;
         }
     }
