--- a/src/pages/homePage/Home.css
+++ b/src/pages/homePage/Home.css
@@ -132,12 +132,11 @@
 .heading-bookresults {
     display: flex;
     justify-content: space-between;
-    /*border: 2px solid red;*/
     margin: 0 2rem 1rem 2rem;
 }
 
 .heading-bookresults p {
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid var(--dark-blue);
     width: 180px;
 }
 
