--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,7 @@ a, button, input {
 /* ── 3. Links-button-input ────────────────────────────────────────────── */
 a {
     text-decoration: none;
+    color: inherit;
 }
 a, button, [role="button"], .nav-toggle-wrapper {
     -webkit-tap-highlight-color: transparent;
@@ -86,6 +87,10 @@ a:active, a:focus, .nav-toggle-wrapper {
 }
 li {
     list-style: none;
+}
+.secondary-button {
+    margin: 1rem 0 0 0;
+    padding: 15px 20px;
 }
 
 /* ── 4. Media Queries ─────────────────────────────────────────── */
