--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
    1. Global Styles
    2. Typography
    3. Links-button-input
-   4. Media Queries
+   4. Loader
+   5. Media Queries
    ──────────────────────────────────────────────────────────────── */
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /* ── 1. Global Styles ─────────────────────────────────────────── */
@@ -23,12 +24,12 @@
     --background: var(--white);
     --foreground: var(--black);
     --nav-link: var(--white);
-    --nav-link-hover: var(--yellow);
     --transition: 0.3s ease;
     --nav-footer: linear-gradient(90deg, #243748, #4B749F);
     --menu-bar: #4B749F;
     --card-bg: white;
     --icon-color: var(--black);
+    --message: firebrick;
 }
 #root {
     min-height: 100%;
@@ -38,6 +39,7 @@
 html, body {
     height: 100%;
     margin: 0;
+    background: var(--background); color: var(--foreground);
 }
 body {
     font-family: "Poppins", Calibri, Verdana, serif;
@@ -52,9 +54,9 @@ body {
     --background: var(--black);
     --foreground: var(--white);
     --nav-link: var(--white);
-    --nav-link-hover: var(--yellow);
     --card-bg: #334e69;
-    --icon-color: var(--yellow);
+    --icon-color: var(--black);
+    --message: var(--yellow);
     --transition: 0.3s ease;
 }
 
@@ -93,7 +95,34 @@ li {
     padding: 15px 20px;
 }
 
-/* ── 4. Media Queries ─────────────────────────────────────────── */
+label {
+    color: inherit;
+}
+
+/*    4. Loader ──────────────────────────────────────────────── */
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid var(--foreground);
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    margin: 2rem auto;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
+/* ── 5. Media Queries ─────────────────────────────────────────── */
 @media screen and (min-width: 768px) {
     body {
         font-size: 1.2rem;
