--- a/src/pages/bookDetails/BookDetails.css
+++ b/src/pages/bookDetails/BookDetails.css
@@ -74,7 +74,7 @@
 /*    4. Button ──────────────────────────────────────────────── */
 .button-overview {
     padding: 0.5rem 1rem;
-    display: flex;
+    display: none;
     align-items: center;
     gap: 0.1rem;
     color: var(--black);
@@ -90,10 +90,6 @@
 }
 
 .button-overview {
-    display: none;
-}
-
-.button-mobile {
     display: flex;
     margin: 2rem auto 0 auto;
 }
@@ -112,26 +108,30 @@
         width: 300px;
     }
 
-    .wrapper-summary {
-        padding-left: 2rem;
-    }
-
     .wrapper-summary h2, h3 {
         margin-bottom: 1rem;
     }
 
     .button-overview {
         display: flex;
-        margin: 1rem 0 0 0;
+        /*margin: 1rem 0 0 0;*/
         padding: 1rem 2rem;
         font-size: 1.2rem;
+        align-self: flex-end;
+        margin-top: auto;
+    }
+
+    .button-mobile {
+        margin: 0;
     }
 
     .wrapper-summary {
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: flex-start;
+        align-items: flex-start;
         gap: 1rem;
+        padding-left: 2rem;
     }
 
     .media-column .button-overview {
