--- a/src/pages/signIn/SignIn.css
+++ b/src/pages/signIn/SignIn.css
@@ -62,7 +62,7 @@ input {
 }
 
 .signup-section {
-    border-top: 1px solid var(--black);
+    border-top: 1px solid var(--dark-blue);
 }
 
 .signup-section p:first-child {
