--- a/src/pages/signUp/SignUp.css
+++ b/src/pages/signUp/SignUp.css
@@ -16,6 +16,7 @@
 
 .outer-container-register h1 {
     padding-top: 1rem;
+    margin-left: 0;
 }
 
 /* ── 2. Form ────────────────────────────────────────────── */
@@ -27,8 +28,8 @@
 /* ── 3. Media Queries ─────────────────────────────────────────── */
 @media screen and (min-width: 768px) {
     .outer-container-register{
-        margin: 10rem 0 0 auto;
-        /*border: 2px dashed purple;*/
+        margin: 10rem auto 0 auto;
         min-width: 500px;
+
     }
 }
