profile css gestyled

--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -1,6 +1,22 @@
 .outer-container-profile {
     margin-top: 2rem;
     border-top: 1px solid var(--dark-blue);
+    display: flex;
+    flex-direction: column;
+}
+
+.outer-container-profile > h1 {
+    padding-top: 1rem;
+    margin-left: 0;
+}
+
+.message {
+    font-weight: bold;
+    color: var(--message);
+}
+
+.outer-container-profile > p {
+    padding-bottom: 1rem;
 }
 
 /* ── 3. Media Queries ─────────────────────────────────────────── */
@@ -9,7 +25,6 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        width: 60vw;
         margin: 10rem 0 0 auto;
     }
 }
